--- a/editchild.html
+++ b/editchild.html
@@ -95,7 +95,7 @@
     <h2>Edit Existing Child</h2>
 
     <!--for phase 4, add link to php page below-->
-    <form action="">
+    <form action="editchild.php" method="post">
         
         <label for="childid">Child ID:</label> <br>
         <input type="text" id="childid" name="childid"
