--- a/editchore.html
+++ b/editchore.html
@@ -84,7 +84,7 @@
     <h2>Edit Existing Chore</h2>
 
     <!--for phase 4, add link to php page below-->
-    <form action="">
+    <form action="editchore.php" method="post">
         <label for="choreid">Chore ID:</label> <br>
         <input type="text" id="choreid" onchange="myChangeFunction(this)" name="choreid"
                pattern="[0-9]*" title="integers only"
