--- a/acceptchore.html
+++ b/acceptchore.html
@@ -107,7 +107,7 @@
 
     <h2>Accept Pending Chores</h2>
 
-    <form style="margin-top: 50px;" action="">
+    <form style="margin-top: 50px;" action="acceptchore.php" method="post">
         <label for="choreid">Which pending chore would you like to update status?</label> <br>
         <input type="text" id="choreid" name="choreid"
                pattern="[0-9]*" title="integers only"
