--- a/addchore.html
+++ b/addchore.html
@@ -1,6 +1,4 @@
-﻿<!-- addchore.html -->
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -85,7 +83,7 @@
     <h2>Add New Chore</h2>
 
     <!--for phase 4, add link to php page below-->
-    <form action="">
+    <form action="signin.php" method="post">
 
         <p>Who is this chore for?</p>
 
