--- a/chorelistmanage.html
+++ b/chorelistmanage.html
@@ -1,6 +1,4 @@
-﻿<!-- chorelistmanage.html -->
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -116,7 +114,7 @@
     </p>
 
     <!--for phase 4, add link to php page below-->
-    <form style="margin-top: 50px" action="" id="accept">
+    <form style="margin-top: 50px" action="deletechore.php" method="post" id="accept">
         <label for="choreid">Enter the id of the chore you would like to delete:</label> <br>
         <input type="text" id="choreid" name="choreid"
                pattern="[0-9]*" title="integers only"
