--- a/signin.html
+++ b/signin.html
@@ -117,7 +117,7 @@
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" class="input-field"
-                   pattern="[A-Za-z0-9!_]*" title="Alphanumerics and/or ! _"
+                   pattern="[A-Za-z0-9$./~!@#%^&()_+=-]" title="Alphanumerics and/or ! _"
                    placeholder="Enter password" required>
 
             <p id="invalid_login"></p>
