working parentportal.php code

--- a/signup.html
+++ b/signup.html
@@ -163,7 +163,7 @@
             }
             else if (params.has("success")) {
                 // once account is created, automatically log into parent portal.
-                window.location.href = "parentportal.html";
+                window.location.href = "parentportal.php";
             }
         </script>
     </div>
