working chorelistmanage and childmanage

--- a/childmanage.html
+++ b/childmanage.html
@@ -127,7 +127,7 @@
     </p>
 
     <!--for phase 4, add link to php page below-->
-    <form style="margin-top: 50px" action="" id="accept">
+    <form style="margin-top: 50px" action="deletechild.php" method="post" id="accept">
         <label for="childid">Enter the id of the child you would like to delete:</label> <br>
         <input type="text" id="childid" name="childid"
                pattern="[0-9]*" title="integers only"
