--- a/editchild.html
+++ b/editchild.html
@@ -1,5 +1,3 @@
-<!-- editchild.html -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -97,7 +95,7 @@
     <h2>Edit Existing Child</h2>
 
     <!--for phase 4, add link to php page below-->
-    <form action="editchild.php" method="POST">
+    <form action="">
 
         <label for="childid">Child ID:</label> <br>
         <input type="text" id="childid" name="childid"
