--- a/editchore.html
+++ b/editchore.html
@@ -1,6 +1,4 @@
-﻿<!-- editchore.html -->
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -86,9 +84,9 @@
     <h2>Edit Existing Chore</h2>
 
     <!--for phase 4, add link to php page below-->
-    <form action="editchore.php" method="post">
+    <form action="">
         <label for="choreid">Chore ID:</label> <br>
-        <input type="text" id="choreid" onchange="myChangeFunction(this)" name="choreid" class="input-field"
+        <input type="text" id="choreid" onchange="myChangeFunction(this)" name="choreid"
                pattern="[0-9]*" title="integers only"
                placeholder="Enter the chore id" required> <br> <br>
 
