--- a/childmanage.html
+++ b/childmanage.html
@@ -122,7 +122,7 @@
     <!--Buttons to other pages-->
     <p style="text-align: center;">
 
-        <a class="button" href="addchild.html">Add a child</a>
+        <a class="button" href="addchild.php">Add a child</a>
         <a class="button" href="editchild.html">Edit a child</a>
     </p>
 
