--- a/parentportal.html
+++ b/parentportal.html
@@ -125,7 +125,7 @@
 
         <!--table headings-->
         <tr>
-            <th style="width: 25%">Kid</th>
+            <th style="width: 25%">Child</th>
             <th style="width: 15%">ChoreID</th>
             <th style="width: 35%">Chore</th>
             <th style="width: 25%">Status</th>
